Fixed whitespace on cases
Shrink-wrapped divs on progress and case pages to fit content

--- a/css/custom.css
+++ b/css/custom.css
@@ -10,6 +10,7 @@ body {
 	background-color: #C0C0C0;
 	border-radius: 10px;
 	overflow: hidden;
+	display: inline-block;
 }
 .promo {
 	padding: 10px;
